2007-08-10  John W. Eaton  <jwe@octave.org>

	* image/Makefile.in (DISTFILES): Also include $(IMAGES) in the list.
	(install install-strip): Use $(IMAGES), not $(IMAGE_FILES_NO_DIR).
	(uninstall): Use $(IMAGES), not $(IMAGE_FILES_NO_DIR).
	(IMAGE_FILES, IMAGE_FILES_NO_DIR): Delete obsolete variables.

2007-08-10  Kai Habel  <kai.habel@gmx.de>

	* plot/patch.m, plot/__patch__.m: New files.
	* plot/Makefile.in (SOURCES): Add them to the list.

2007-08-07  John W. Eaton  <jwe@octave.org>

	* path/savepath.m: Use single quotes for argument to PATH command
	that is inserted in file.

2007-07-27  John W. Eaton  <jwe@octave.org>

	* plot/drawnow.m: Only set default value for term if GNUTERM is
	not set in the environment.

2007-07-25  David Bateman  <dbateman@free.fr>

	* Makefile.in, audio/Makefile.in, control/Makefile.in,
	control/base/Makefile.in, control/hinf/Makefile.in,
	control/obsolete/Makefile.in, control/system/Makefile.in, 
	control/util/Makefile.in, deprecated/Makefile.in,
	elfun/Makefile.in, finance/Makefile.in, general/Makefile.in,
	image/Makefile.in, io/Makefile.in, linear-algebra/Makefile.in,
	miscellaneous/Makefile.in, optimizaton/Makefile.in,
	path/Makefile.in, pkg/Makefile.in, plot/Makefile.in,
	polynomial/Makefile.in, quaternion/Makefile.in,
	set/Makefile.in, signal/Makefile.in, sparse/Makefile.in,
	specfun/Makefile.in, special-matrix/Makefile.in,
	startup/Makefile.in, statistics/Makefile.in,
	statistics/base/Makefile.in, statistics/distributions/Makefile.in,
	statistics/models/Makefile.in, statistics/tests/Makefile.in,
	strings/Makefile.in, testfun/Makefile.in, time/Makefile.in:
	Adjust DISTFILES to allow out of tree "make dist" to work.

2007-07-25  John W. Eaton  <jwe@octave.org>

	* plot/__plt2__.m: Return [](0x1) if both X and Y are empty.

2007-07-24  David Bateman  <dbateman@free.fr>

	* image/flag.m: New colormap function.
	* images/Makefile.in: Include it in SOURCES.

	* image/autumn.m image/bone.m image/cool.m image/copper.m 